move map reduce into local directory

--- a/appendix.tex
+++ b/appendix.tex
@@ -39,4 +39,4 @@ After the \gls{merra} parser, a simple implementation of MapReduce is provided i
     showtabs=false
 }
 A simple mapreduce implementation for word counting in Python is presented below \cite{keller2}.
-\lstinputlisting{/Users/christopher/Development/personal/mapreduce_python/pr.py}
+\lstinputlisting{pr.py}
