--- a/future.tex
+++ b/future.tex
@@ -10,7 +10,7 @@ One attribute of any big data problem is that of volume. Some offerings have lar
     \item process the data remotely on site
 \end{itemize}
 This section takes a look at each of the three alternatives and the advantageous and disadvantageous of each approach.
-\subsection{\gls{api}}
+\subsection{API}
 Many federal data sets are already publicly available in compressed formats, usually by time or type. In order to provide data as a service, the provider would need implement various \gls{api}s allowing the consumer to slice and dice the data sets as necessary and on demand. This has the advantage of being very simple to implement on the part of the consumer. Simply issue the request, retrieve the results, and implement the analytics locally. There are two obvious problems with this approach: latency of the requests rules out real time analytics and the enormous network bandwidth requirements of everyone pulling down data simultaneously. Local storage space is still required, at least as large as the largest possible retrieval, making this a questionable approach from the start. Additionally, the data provider needs to provide an \gls{api} capable of the granularity of individual results as well as the breath of the entire data set. This type of approach simply does not scale well to the largest data sets and places a burden on strained federal agency \gls{it} budgets.
 \subsection{Cloning}
 Possibly the most common approach is to clone the data to a local data center. The benefits are obvious: network adjacent access speeds, self imposed reliability, and freedom to store and index the data in any way necessary.  Even the initial population of historical data sets can be managed by project timelines or even by shipping tapes or hard disks between data centers. The downside, of course, is the immense cost in replicating peta scale data sets locally. Even with storage costs dropping and data center efficiencies increasing, the outlay of capital necessary to stand up a large data center is significant. One often overlooked issue with duplicating public data sets is in quality assurance and quality control. It is trivial it ensure exact duplicates of data have been created, \gls{tcpip} and checksumming are longstanding solutions. What happens if an error is discovered in the original copy of the data? What if that error leads to erroneous results that are passed onto customers?  While the U.S. government does not always prevail in weather related liability proceedings, most of the time they win on the basis of immunity  \cite[Chapter~4]{fairweather}. 
