replace climatedge macro with actual command through so we don't gets spaces before periods.

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -10,7 +10,7 @@ This can be looked at in the first paragaph of the intro
 
 In a guest blog post, Michael Stonebraker gives four detailed definitions to the term big data\index{big data}\cite{stonebraker}. He boils it down to the same basic concepts that most of the non-technical world uses: velocity, volume, or variety. \gls{merra} data is not particularly fast moving by modern measurements: the data can be retrieved in daily (containing hourly measurements) or monthly. As far as volume goes, \gls{merra} is about two hundred terabytes since January 1979 and growing according to Dr. Daniel Walker of CSC[personal communication, 2012]. Lastly, \gls{merra} only comes in as single format known as the \gls{hdf}\cite{hdf}.\\
 
-By Mr. Stonebraker's definition, the most applicable to \climatedge would be big analytics on big volumes of data. While two hundred terabytes is certainly manageable using commercially available modern hardware, it is too large to fit efficiently on a single system, thus being an excellent candidate for \gls{nosql}\index{noSQL}/big data technologies that tend to scale horizontally (scale out) rather than vertically (scale up).
+By Mr. Stonebraker's definition, the most applicable to ClimatEdge\texttrademark{} would be big analytics on big volumes of data. While two hundred terabytes is certainly manageable using commercially available modern hardware, it is too large to fit efficiently on a single system, thus being an excellent candidate for \gls{nosql}\index{noSQL}/big data technologies that tend to scale horizontally (scale out) rather than vertically (scale up).
 
 
 
