--- a/flood.tex
+++ b/flood.tex
@@ -24,7 +24,7 @@ Again, Dr. Christopher Anderson and Dr. Dan Walker have determined that the nece
 \end{itemize}
 As with the tornado data, most if not all, is in the public domain and freely available.
 \subsection{Objective}
-The year-to-year probability of the number of floods can be expressed in manner similar tornados, using a Poisson distribution. The analytics would be computed several times per year in order to account for new data and provided either on demand via a portal, an XML feed to POINT IN, or via customized  report, similar to \climatedge.
+The year-to-year probability of the number of floods can be expressed in manner similar tornados, using a Poisson distribution. The analytics would be computed several times per year in order to account for new data and provided either on demand via a portal, an XML feed to POINT IN, or via customized  report, similar to ClimatEdge\texttrademark{}.
 
 [integral is a tool for flood]
 
