--- a/future.tex
+++ b/future.tex
@@ -3,7 +3,7 @@
 \newacronym{it}{IT}{Information Technology}
 \newacronym{tcpip}{TCP/IP}{Transmission Control Protocol Internet Protocol}
 \section{Future Directions}
-One attribute of any big data problem is that of volume. Some offerings have larger volume, some do not, but every big data solution should provide cost effective data access as a core capability. With respect to \climatedge, petabytes of publicly accessible climate data reside at the various government agencies which collected them. Should a data center be constructed and the data simply  downloaded? There are several broad approaches to the problem of remote data access:
+One attribute of any big data problem is that of volume. Some offerings have larger volume, some do not, but every big data solution should provide cost effective data access as a core capability. With respect to ClimatEdge\texttrademark{}, petabytes of publicly accessible climate data reside at the various government agencies which collected them. Should a data center be constructed and the data simply  downloaded? There are several broad approaches to the problem of remote data access:
 \begin{itemize}
     \item provide an \gls{api} that facilitates access the data at its remote location
     \item clone the data and store it locally within a \textsc{CSC} data center
