--- a/solution.tex
+++ b/solution.tex
@@ -7,14 +7,14 @@
 \newacronym{raid}{RAID}{Redundant Array of Independent Disk}
 \newacronym{s3}{S3}{Simple Storage Service}
 \section{Reference Big Data Framework}
-A framework for data processing has responsibility for implementing several overall goals. These goals, independent from their technical implementation, are a core part of transforming information from raw data to actionable results, such as the \climatedge analytics. Applying a big data label means the framework operates at the scale necessary to accommodate the velocity, volume, and variety of expected data. In order to quantitatively process the ever increasing amounts of structured and unstructured data sets necessary in a \climatedge offering, we need a technical framework capable of providing the following functionality:
+A framework for data processing has responsibility for implementing several overall goals. These goals, independent from their technical implementation, are a core part of transforming information from raw data to actionable results, such as the ClimatEdge\texttrademark{} analytics. Applying a big data label means the framework operates at the scale necessary to accommodate the velocity, volume, and variety of expected data. In order to quantitatively process the ever increasing amounts of structured and unstructured data sets necessary in a ClimatEdge\texttrademark{} offering, we need a technical framework capable of providing the following functionality:
 \begin{itemize}
 	\item retrieving data updates
 	\item storing and indexing for optimal retrieval
 	\item data discovery and analytics
 	\item presenting real-time and offline results
 \end{itemize}
-Each functional layer can be represented graphically, building on the layer to its left and on top of an infrastructure implementation. The difference between a framework and a platform is one of flexibility and customization.  In order to support a wide variety of future data types and analytic requirements, a framework of tools is preferable to an extensible product platform. Using a framework, it is possible to build loosely coupled layers that can be swapped out as technology evolves and requirements change. While capable of delivering a flexible and extensible solution, the cost of this approach is in the systems integration and development expertise necessary in wiring the layers together in a seamless fashion. Having a framework capable of of providing this functionality is crucial in allowing \climatedge to deliver its offerings to both current and future clients. Figure \ref{layers} shows the layers of the proposed framework.
+Each functional layer can be represented graphically, building on the layer to its left and on top of an infrastructure implementation. The difference between a framework and a platform is one of flexibility and customization.  In order to support a wide variety of future data types and analytic requirements, a framework of tools is preferable to an extensible product platform. Using a framework, it is possible to build loosely coupled layers that can be swapped out as technology evolves and requirements change. While capable of delivering a flexible and extensible solution, the cost of this approach is in the systems integration and development expertise necessary in wiring the layers together in a seamless fashion. Having a framework capable of of providing this functionality is crucial in allowing ClimatEdge\texttrademark{} to deliver its offerings to both current and future clients. Figure \ref{layers} shows the layers of the proposed framework.
 \begin{figure}[!htbp]
     \centering
     \includegraphics[scale=.80]{framework_layers}
@@ -29,7 +29,7 @@ At the heart of any big data platform is the elastic infrastructure upon which i
 \end{itemize}
 Missing from the above list is reliability. Many industry leaders, such as Google, Amazon, Netflix, Twitter, etc, have implemented reliability in software as opposed to hardware, effectively moving it into software storage layer. This approach gives the flexibility to completely replace failed storage and compute nodes with upgraded versions at leisure and without necessarily impacting overall reliability. This also has the added benefit of  reducing hardware storage costs, since expensive \gls{raid} technology is no longer required to be purchased during every technology refresh.\\
 
-As offerings mature and new capabilities are brought online, it is probable that certain data sets outside of \climatedge, such as healthcare, may want to be kept within corporate control to ease privacy concerns. In this situation, a platform built on \gls{aws} is not feasible. While BizCloud is the preferred corporate solution, a small scale platform could also be created which replicates best practices from other big data organizations. Facebook's Open Compute Project is a community targeted effort in data center efficiency, with many vendors selling compliant solutions \cite{opencompute}. Combined with an open source hypervisor, such as Xen, it is possible to replicate much of the basic \gls{iaas} functionality in house \cite{xen}.
+As offerings mature and new capabilities are brought online, it is probable that certain data sets outside of ClimatEdge\texttrademark{}, such as healthcare, may want to be kept within corporate control to ease privacy concerns. In this situation, a platform built on \gls{aws} is not feasible. While BizCloud is the preferred corporate solution, a small scale platform could also be created which replicates best practices from other big data organizations. Facebook's Open Compute Project is a community targeted effort in data center efficiency, with many vendors selling compliant solutions \cite{opencompute}. Combined with an open source hypervisor, such as Xen, it is possible to replicate much of the basic \gls{iaas} functionality in house \cite{xen}.
 \subsection{Data Acquisition}
 The data acquisition layer holds the technology to retrieve the latest data sets, pre-process them with parsers  to extract the required information and pass them onto the storage and indexing layer for permanent storage. By definition, this layer has a basic requirement of storage and compute elasticity. As an example, the \gls{merra} data sets can be as large as several terabytes when taking into account all the variables. However, certain analytics require much fewer variables than what is included. It is possible to simply store all of the variables in hopes that future offerings can make use of them or, they can be discarded in order to save storage space. A 300 megabyte daily file might be reduced to 30 megabytes after extraneous variables are discarded.  In order to ingest the entire thirty-three year \gls{merra} history, three to four terabytes would be temporarily be required. However the information indexed and persistently stored might be closer to 300 or 400 gigabytes. Along similar lines, one \gls{cpu} core might be allocated to process each year of data in parallel for speed, requiring thirty three simultaneous cores for a short period of time. \\
 
@@ -68,7 +68,7 @@ In terms of logical representation inside of a data store, table \ref{model} lis
 \end{table}
 This simple structure, in conjunction with materialized views,\index{materialized views} enables fast analytic retrieval of data based on any combination of the following: temporal, geospatial, or by meta-data \cite{materialized_views}. Materialized views provide an alternative to traditional indexing technology that work well, but at the cost of storage efficiency. 
 \subsection{Discovery and Analytics}
-The technology behind big data storage is generally only interesting to engineers. Customers pay for the results and insights gleaned from analysis of the stored data. The discovery and analytic processes make further usage of the elastic compute infrastructure identified earlier. Analytics can generally be organized into the two modes in which they are run: realtime and offline. Whenever analytics are run, it is crucial to design the algorithms to to take advantage of additional capacity as needed and then to release it to realize cost savings. Through extensive testing and modeling , it should be straightforward to estimate the necessary capacity for all the offline analytics and spin up resources at well established intervals. Realtime is somewhat more complex as it is difficult to understand capacity requirements a priori. \gls{ec2} Reserved Instances from \gls{aws} are an excellent way to partially address this problem. Analytical implementations vary according to specific requirements, but R, Java, and Python are extremely popular and would be ideal for \climatedge. Both classes of analytics are presented in further detail below.
+The technology behind big data storage is generally only interesting to engineers. Customers pay for the results and insights gleaned from analysis of the stored data. The discovery and analytic processes make further usage of the elastic compute infrastructure identified earlier. Analytics can generally be organized into the two modes in which they are run: realtime and offline. Whenever analytics are run, it is crucial to design the algorithms to to take advantage of additional capacity as needed and then to release it to realize cost savings. Through extensive testing and modeling , it should be straightforward to estimate the necessary capacity for all the offline analytics and spin up resources at well established intervals. Realtime is somewhat more complex as it is difficult to understand capacity requirements a priori. \gls{ec2} Reserved Instances from \gls{aws} are an excellent way to partially address this problem. Analytical implementations vary according to specific requirements, but R, Java, and Python are extremely popular and would be ideal for ClimatEdge\texttrademark{}. Both classes of analytics are presented in further detail below.
 \subsubsection{Offline Analytics}
 Offline analytics, also known as batch, are run at predefined intervals without human interaction. Well defined questions are implemented ahead of time, optimized in the storage layer, tested and refined, and then set to run through a scheduling mechanism like Jenkins or Cron. The tornado and flood analytics are excellent examples of a batch jobs needing to be run at well defined intervals to take account of updated data. MapReduce, popularized by Google, is an extremely common implementation of distributed processing over large data sets. It is implementation agnostic and several popular frameworks exist to speed up development. The output from the MapReduce jobs can be written to the data store and used as input to the presentation layer.
 \subsubsection{Realtime Analytics}
@@ -78,6 +78,6 @@ One approach to realtime analytics involves crowd sourcing. Conceptually simple,
 \subsection{Presentation}
 The presentation layer not only handles delivery of both types of analytic results, but also handles any user interaction with the data store, such as interactive discovery or real time queries. Data visualization, usually graphical in nature,  is a specific instance of information presentation and can be assumed to be handled within this layer. Discussions were conducted with the sales team at Quantum4D around their main data discovery and visualization product \cite{quantum}. While there are great many products around that fill this role, the Quantum4D platform is storage layer agnostic which stands out amongst its competitors and makes an excellent flexible addition to the presentation layer.\\
 
- While each and every business offering has specific implementation requirements, framework support of the the following formats will cover many of the use cases: \gls{html}, mobile, and structured text. Fortunately, wide adoption of \gls{html}5 standards, across both desktop and mobile browsers, brings the promise of "write once, run anywhere" closer to fruition. However, applications that require advanced security and graphically intensive user experiences will benefit from native implementation in either Objective-C (Apple) or Java (Android). Structured text is often represented by serialized \gls{xml}, as is the case with \climatedge offerings. Customer specific implementations are often required in any offering, which lead to presentation solutions built upon various \gls{json} libraries such as Node.js, Socket.io, Processing.js and Backbone.js.\\
+ While each and every business offering has specific implementation requirements, framework support of the the following formats will cover many of the use cases: \gls{html}, mobile, and structured text. Fortunately, wide adoption of \gls{html}5 standards, across both desktop and mobile browsers, brings the promise of "write once, run anywhere" closer to fruition. However, applications that require advanced security and graphically intensive user experiences will benefit from native implementation in either Objective-C (Apple) or Java (Android). Structured text is often represented by serialized \gls{xml}, as is the case with ClimatEdge\texttrademark{} offerings. Customer specific implementations are often required in any offering, which lead to presentation solutions built upon various \gls{json} libraries such as Node.js, Socket.io, Processing.js and Backbone.js.\\
 
 The components presented here are one implementable approach to a flexible big data framework for ingesting, storing, analyzing, and presenting both structured unstructured data. There is no commercial solution capable of covering every possible scenario, since requirements evolve and technologies improve. Todays solution may not work tomorrow and tomorrows solution may not exist yet. Therefore, a flexible framework capable of adapting to a variety of technologies is a superior approach. Flexibility and loose coupling of technology to each layer are ways to ensure that the solution framework and expertise \textsc{CSC} is investing in today, will fit the customers and requirements of tomorrow.
