--- a/title.tex
+++ b/title.tex
@@ -3,7 +3,7 @@
     \vspace*{\fill}
     \begin{center}
         \textbf{\Large Christopher Keller}\\[1cm]
-        \textit{A Big Data Approach To \climatedge}\\ [.5cm]
+        \textit{A Big Data Approach To ClimatEdge\texttrademark{}}\\ [.5cm]
          CSC NPS Solution Leadership Institute\\ [.5cm]
         \today
     \end{center}
